Eclipse .m2 lifecycle plugins management

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -581,7 +581,7 @@
                         </execution>
                     </executions>
                 </plugin>
-                <!-- Control de dependencias -->
+                <!-- Dependency control -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
@@ -694,6 +694,51 @@
                         </execution>
                     </executions>
                 </plugin>
+                <!-- dependency plugin -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>3.1.1</version>
+                </plugin>
+                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the
+                    Maven build itself. -->
+                <plugin>
+                    <groupId>org.eclipse.m2e</groupId>
+                    <artifactId>lifecycle-mapping</artifactId>
+                    <version>1.0.0</version>
+                    <configuration>
+                        <lifecycleMappingMetadata>
+                            <pluginExecutions>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>com.cast-info.devops</groupId>
+                                        <artifactId>robotest-suite-cases-json-generator</artifactId>
+                                        <versionRange>[${project.version},)</versionRange>
+                                        <goals>
+                                            <goal>robotestsextractor</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore />
+                                    </action>
+                                </pluginExecution>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>org.apache.maven.plugins</groupId>
+                                        <artifactId>maven-dependency-plugin</artifactId>
+                                        <versionRange>[3.1.1,)</versionRange>
+                                        <goals>
+                                            <goal>unpack</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore />
+                                    </action>
+                                </pluginExecution>
+                            </pluginExecutions>
+                        </lifecycleMappingMetadata>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
@@ -782,7 +827,6 @@
                             <failIfNoTests>false</failIfNoTests>
                         </configuration>
                     </plugin>
-
                 </plugins>
             </build>
         </profile>
